Fix Features spacing (#10)
* Update next ice mechanisms

* Add ice to articles in category-landing, fix article title field in home

* Add ice to article repeating group

* Update receptacles to drop target - home page

* Update receptacles to drop target - layout

* Fix homepage features styles

* Fix features spacing

--- a/sources/sass/components/_features.scss
+++ b/sources/sass/components/_features.scss
@@ -16,6 +16,7 @@
 
     .feature-container {
       width: calc(50% - #{$gutter});
+      margin: 0 0 3em 3em;
     }
 
 		.feature {
